fix: match page bleed background

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -13,7 +13,7 @@
 html {
     color: var(--clr-text);
     background-color: var(--clr-page-sago-blue);
-    background-image: var(--gradient-page);
+    background-image: var(--gradient-page-bleed);
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
@@ -24,7 +24,7 @@ body {
     font: var(--font-body-md);
     line-height: 1.5;
     background-color: var(--clr-page-sago-blue);
-    background-image: var(--gradient-page);
+    background-image: var(--gradient-page-bleed);
 }
 
 a {
